# edu_simulation

./: CMakeLists.txt  README.md  package.xml
config/: gazebo.config
docker/host/: Dockerfile  makefile
docker/image/: Dockerfile  entrypoint  makefile
docker/pc/: docker-compose.yaml
documentation/: models.md
include/edu_simulation/: eduard_gazebo_bot.hpp  eduard_hardware_component_factory.hpp  eduard_model_plugin.hpp  gazebo_hardware_adapter.hpp  gazebo_imu_sensor.hpp  gazebo_lighting.hpp  gazebo_motor_controller.hpp  gazebo_motor_plugin.hpp  gazebo_range_sensor.hpp  gazebo_tof_ring_sensor.hpp  gazebo_tof_sensor.hpp  gazebo_virtual_range_sensor.hpp  object_detection_sensor.hpp
install/: local_setup.sh  setup.sh
install/edu_simulation/share/ament_index/resource_index/package_run_dependencies/: edu_simulation
install/edu_simulation/share/edu_simulation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/edu_simulation/share/edu_simulation/cmake/: edu_simulationConfig.cmake
install/edu_simulation/share/edu_simulation/model/TER0/mesh/: TER0.stl
install/edu_simulation/share/edu_simulation/model/TER1/: model.sdf
install/edu_simulation/share/edu_simulation/model/eduard_mecanum/: eduard.sdf  model.config
install/edu_simulation/share/edu_simulation/model/eduard_offroad/: eduard.sdf
launch/: eduard.launch.py  eduard_nav2.launch.py  eduard_robot_description.launch.py  gazebo.launch.py  navigation.launch.py  robot_remote_control.launch.py  slam.launch.py  spawn_eduard.launch.py  spawn_eduard.py
log/: latest_build
model/: Pebble4.dae  Pebble4.stl  TER0.dae  TER1.dae  TER2.dae  TER2.stl
model/Gravel/: model.config  model.sdf
model/Gravel_plain/: model.config  model.sdf
model/Gravel_ramp1/: model.config  model.sdf
model/Gravel_ramp2/: model.config  model.sdf
model/Older_versions/: TER0_1.blend  TER0_10.blend  TER0_10_demo.blend  TER0_11.blend  TER0_2.blend  TER0_3.blend  TER0_4.blend  TER0_5.blend  TER0_6.blend  TER0_7a.blend  TER0_7b.blend  TER0_7c.blend  TER0_7d.blend  TER0_8.blend  TER0_9.blend  TER0_9a.blend  TER0_9b.blend  TER0_9c.blend
model/Pebble1/: model.config  model.sdf
model/Pebble1/blender/: Pebble1.blend
model/Pebble1/mesh/: Pebble1.dae  Pebble1.stl
model/Pebble2/: model.config  model.sdf
model/Pebble2/blender/: Pebble2.blend
model/Pebble2/mesh/: Pebble2.dae  Pebble2.stl
model/Pebble3/: model.config  model.sdf
model/Pebble3/blender/: Pebble3.blend
model/Pebble3/mesh/: Pebble3.dae  Pebble3.stl
model/Pebble4/: model.config  model.sdf
model/Pebble4/blender/: Pebble4.blend
model/Pebble4/mesh/: Pebble4.dae  Pebble4.stl
model/Sensor_Standard_Test/: Sensor_Standard_Test.blend
model/TER0/: TER0_plain.dae  TER0_plain.stl  model.config  model.sdf
model/TER0_basin/: model.config  model.sdf
model/TER0_basin/blender/: TER0_basin.blend
model/TER0_basin/mesh/: TER0_basin.dae  TER0_basin.stl
model/TER0_plain/: model.config  model.sdf
model/TER0_plain/blender/: TER0_plain.blend
model/TER0_plain/mesh/: TER0_plain.dae  TER0_plain.stl
model/TER0_ramp/: model.config  model.sdf
model/TER0_ramp/blender/: TER0_ramp.blend
model/TER0_ramp/mesh/: TER0_ramp.dae
model/TER0_texture/: TER0_texture.blend  model.config  model.sdf
model/TER0_texture/blender/: TER0_texture.blend
model/TER0_texture/mesh/: TER0_texture.dae  TER0_texture.stl
model/TER1/: model.config  model.sdf
model/TER1/mesh/: TER1.stl
model/TER2/: model.config  model.sdf
model/TER2/blender/: TER2.blend
model/TER2/mesh/: TER2.dae  TER2.stl
model/TER3/: model.config  model.sdf
model/TER3/blender/: TER3.blend
model/TER3/mesh/: TER3.dae  TER3.stl
model/eduard/: eduard.sdf  eduard.urdf  imu.urdf  inertial.urdf  model.config  range_sensor.urdf  wheel.urdf
model/eduard/mesh/: mecanum-wheel-eduard.dae  offroad-wheel-eduard.dae
model/eduard_blue_mecanum/: eduard.sdf  model.config
model/eduard_blue_mecanum/mesh/: mecanum-wheel-right-eduard.dae
model/eduard_blue_olive_cam/: eduard.sdf  model.config
model/eduard_green_mecanum/: eduard.sdf  model.config
model/eduard_green_olive_cam/: eduard.sdf  model.config
model/eduard_mecanum/: eduard.sdf
model/eduard_mecanum/mesh/: mecanum-wheel-eduard.dae
model/eduard_mecanum_swarm_1/: eduard.sdf  model.config
model/eduard_mecanum_swarm_2/: eduard.sdf  model.config
model/eduard_mecanum_swarm_2/mesh/: mecanum-wheel-left-eduard.dae
model/eduard_mecanum_swarm_3/: eduard.sdf  model.config
model/eduard_offroad/: eduard.sdf  model.config
model/eduard_red_mecanum/: eduard.sdf  model.config
model/floor_10x10/: floor.sdf  model.config
model/floor_10x10/mesh/: floor.dae
model/object_detection_sensor/: eduard-object-detection-sensor.sdf  model.config
parameter/: collision_avoidance_lidar.yaml  gazebo.yaml  navigation.yaml  slam.yaml
src/: CMakeLists.txt  collision_avoidance_lidar_node.cpp  collision_avoidance_lidar_node.hpp  eduard_gazebo_bot.cpp  eduard_hardware_component_factory.cpp  eduard_model_plugin.cpp  gazebo_hardware_adapter.cpp  gazebo_imu_sensor.cpp  gazebo_lighting.cpp  gazebo_motor_controller.cpp  gazebo_motor_plugin.cpp  gazebo_range_sensor.cpp  gazebo_tof_ring_sensor.cpp  gazebo_tof_sensor.cpp  gazebo_virtual_range_sensor.cpp  object_detection_sensor.cpp
world/: depot.world  eduard_blue_nav2.world
