<?xml version="1.0"?>
<package format="3">
  <name>edu_simulation</name>
  <version>0.2.0</version>
  <description>Provides EduArt simulation model for Gazebo.</description>

  <maintainer email="christian.wendt@eduard-robotik.com">Christian Wendt</maintainer>

  <license>BSD-3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>edu_robot</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>laser_geometry</depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/model"/>
    <gazebo_ros gazebo_media_path="${prefix}/world"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>